# apps/server/src/routes/order.route.ts
@@ -4,6 +4,7 @@ import * as myController from '@/controllers/my.controller';
 import {
   cancelOrderValidator,
   createOrderValidator,
+  guestOrderPwValidator,
   guestValidator,
   paramsNoValidator,
   updateOrderAddressValidator,
@@ -29,6 +30,13 @@ router.get('/', requireAdmin, asyncHandler(orderController.getList));
  */
 /** POST /orders/guest : [비회원] 주문 목록 조회 */
 router.post('/guest', validate(guestValidator), asyncHandler(orderController.getGuestOrders));
+
+/** PUT /orders/guest/pw : [비회원] 주문 비밀번호를 임시 비밀번호로 변경한 뒤 이메일 전송 */
+router.put(
+  '/guest/pw',
+  validate(guestOrderPwValidator),
+  asyncHandler(orderController.updateGuestOrderPwSendEmail),
+);
 
 /** GET /orders/guest/{no} : [비회원] 주문 조회 */
 router.get('/guest/:no', asyncHandler(myController.getOrder));
